--- a/src/views/commands.html
+++ b/src/views/commands.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comandos da Lilly</title>
-    <link rel="shortcut icon" href="/public/assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="public/styles/animations.css">
-    <link rel="stylesheet" href="public/styles/commands.css">
-    <link rel="stylesheet" href="public/styles/responsive.css">
+    <link rel="stylesheet" href="/styles/animations.css">
+    <link rel="stylesheet" href="/styles/commands.css">
+    <link rel="stylesheet" href="/styles/responsive.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
         <i class="fa fa-bars nav_open_button"></i>
         <nav>
             <a class="navigation" href="/"><i class="fa fa-home"></i> Home</a>
-            <a class="navigation" href="commands.html" rel="internal">&lt;&gt; Comandos</a>
+            <a class="navigation" href="/commmands" rel="internal">&lt;&gt; Comandos</a>
             <a class="navigation" rel="external follow" target="_blank" href="https://discord.gg/SceHNfZ"><i class="fa fa-support"></i> Suporte</a>
             <a class="navigation" href="https://discord.com/api/oauth2/authorize?client_id=754548334328283137&permissions=8&scope=bot" rel="external nofollow" target="_blank"><i class="fa fa-plus"></i> Me Adicione!</a>
         </nav>
@@ -43,5 +43,5 @@
     </div>
 
 
-    <script src="public/scripts/nav_control.js"></script>
+    <script src="/scripts/nav_control.js"></script>
 </body>
