--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lilly Website</title>
-    <link rel="shortcut icon" href="/public/assets/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="public/styles/animations.css">
-    <link rel="stylesheet" href="public/styles/main.css">
-    <link rel="stylesheet" href="public/styles/responsive.css">
+    <link rel="stylesheet" href="/styles/animations.css">
+    <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/responsive.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
@@ -19,20 +19,20 @@
         <i class="fa fa-bars nav_open_button"></i>
         <nav>
             <a class="navigation" href="/"><i class="fa fa-home"></i> Home</a>
-            <a class="navigation" href="commands.html" rel="internal">&lt;&gt; Comandos</a>
+            <a class="navigation" href="/commands" rel="internal">&lt;&gt; Comandos</a>
             <a class="navigation" rel="external follow" target="_blank" href="https://discord.gg/SceHNfZ"><i class="fa fa-support"></i> Suporte</a>
             <a class="navigation" href="https://discord.com/api/oauth2/authorize?client_id=754548334328283137&permissions=8&scope=bot" rel="external nofollow" target="_blank"><i class="fa fa-plus"></i> Me Adicione!</a>
         </nav>
     </header>
     <section id="header">
-        <img src="/public/assets/avatar-lilly.jpg" alt="Foto Lilly">
+        <img src="/assets/avatar-lilly.jpg" alt="Foto Lilly">
         <h2>Olá, eu sou a Lilly e estou ansiosa para fazer parte de seu servidor!!</h2>
         <div id="header_buttons">
             <a href="https://discord.com/api/oauth2/authorize?client_id=754548334328283137&permissions=8&scope=bot" target="_blank" rel="external nofollow"><button><i class="fa fa-plus"></i> Me Adicione</button></a>
 
             <a href="https://discord.gg/SceHNfZ" target="_blank" rel="external nofollow"><button style="background-color: #6274b8;"><i class="fa fa-support"></i> Suporte</button></a>
 
-            <a href="commands.html" rel="internal"><button style="background-color: #05c063;">&lt;&gt; Meus Comandos</button></a>
+            <a href="/commands" rel="internal"><button style="background-color: #05c063;">&lt;&gt; Meus Comandos</button></a>
         </div>
     </section>
 
@@ -59,6 +59,6 @@
             <p>Ela é um bot de com vários propósitos, então existem comandos de vários tipos com de <strong>moderação, economia, administração, utilidades, boas-vindas e mais!!</strong> E o melhor, todos os comandos estão <strong>com suas permissões corretas, ou seja, só membros autorizados podem executar determinadas funções!!</strong></p>
         </section>
     </main>
-    <script src="/public/scripts/nav_control.js"></script>
+    <script src="/scripts/nav_control.js"></script>
 </body>
 </html>
