--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -19,8 +19,9 @@ body {
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #eceaea;
-    background: url(/public/assets/main-background.webp) #0000005d;
+    background: url(/assets/main-background.webp) #0000005d;
     background-blend-mode: multiply;
+    background-attachment: fixed;
 }
 
 header {
