--- a/src/views/commands.html
+++ b/src/views/commands.html
@@ -29,19 +29,14 @@
 
     <div class="commands">
         <h1>Veja alguns dos comandos da Lilly</h1>
+        <p id="ps"><em>*No campo "<strong>como usar</strong>", tudo que tenha "<strong>?</strong>" significa que é opcional, ou seja, não é obrigatório ser passado como parâmetro. É <strong>extremamente recomendado</strong> que você dê a Lilly permissão de <strong>Administrador</strong>. Certifique-se de usar o prefixo certo do servidor.</em></p>
         <span class="total_commands">
-            <span>1</span> Comandos Disponíveis
+            <span>0</span> Comandos Disponíveis
         </span>
-        <div class="command_card">
-            <h2 class="command_name">Say</h2>
-            <p class="command_desc">Comando usado para mandar a Lilly dizer algo</p>
-            <span class="user_permissions"><strong>Permissões do Usuário: </strong><em>Gerenciar Mensagens ou Administrador</em></span>
-            <span class="lilly_permissions"><strong>Permissões da Lilly: </strong><em>Ler e Enviar Mensagens</em></span>
-            <span class="usage"><strong>Como usar: </strong><em>$say &lt;mensagem&gt;</em></span>
-            <span class="aliases"><strong>Atalhos: </strong><em>$dizer, $fale, $repita</em></span>
-        </div>
     </div>
 
 
     <script src="/scripts/nav_control.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js" integrity="sha512-quHCp3WbBNkwLfYUMd+KwBAgpVukJu5MncuQaWXgCrfgcxCJAq/fo+oqrRKOj+UKEmyMCG3tb8RB63W+EmrOBg==" crossorigin="anonymous"></script>
+    <script src="/scripts/listCommands.js"></script>
 </body>
