--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lilly Website</title>
+    <title>Lilly, um bot simples mais poderoso para o Discord</title>
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
 
     <link rel="stylesheet" href="/styles/animations.css">
