--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,6 +6,7 @@
     <title>Lilly, um bot simples mais poderoso para o Discord</title>
     <meta name="description" content="Venha conhecer um dos melhores e mais completos bots do Discord, que vai trazer muita mais alegria, diversão e controle do seu servidor, e o melhor, de graça!">
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/assets/apple-lilly-icon.png">
 
     <link rel="stylesheet" href="/styles/animations.css">
     <link rel="stylesheet" href="/styles/main.css">
