--- a/src/views/commands.html
+++ b/src/views/commands.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comandos da Lilly</title>
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/assets/apple-lilly-icon.png">
 
     <link rel="stylesheet" href="/styles/animations.css">
     <link rel="stylesheet" href="/styles/commands.css">
