--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="sDN0IaiHaK4Hbaqw3xIIj8K4Agraklgtzvrri7kaNd0" />
-    <title>Lilly, um bot simples mais poderoso para o Discord</title>
+    <title>Lilly, um bot simples mas poderoso para o Discord</title>
     <meta name="description" content="Venha conhecer um dos melhores e mais completos bots do Discord, que vai trazer muita mais alegria, diversão e controle do seu servidor, e o melhor, de graça!">
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/assets/apple-lilly-icon.png">
