--- a/public/styles/commands.css
+++ b/public/styles/commands.css
@@ -194,3 +194,57 @@ header nav {
     border-radius: 20px;
     font-style: italic;
 }
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 60vh;
+    background-color: #576cb8;
+    padding: 20px
+}
+
+footer .footer_section {
+    text-align: center;
+    padding: 10px;
+    background-color: #4f62a7;
+    width: 100%;
+    height: 100px;
+    border-radius: 5px;
+}
+
+footer .footer_section h3 {
+    font-size: 22px;
+    margin-bottom: 10px;
+}
+
+footer .footer_section a {
+    font-size: 18px;
+    color: #08d16c;
+    margin-top: 3px;
+    font-weight: bold;
+    text-decoration: none;
+
+    transition: 200ms;
+}
+
+footer .footer_section a:hover {
+    color: #0add74;
+    text-decoration: underline;
+}
+
+footer .social_networks {
+    width: 100%;
+    font-size: 20px;
+    text-align: center;
+}
+
+footer .social_networks a {
+    padding: 5px;
+}
+
+footer .social_networks a img {
+    image-rendering: pixelated;
+}
